Fixes: Better wrapping for text

--- a/src/app/components/work-order-timeline/timeline-cell/timeline-cell.scss
+++ b/src/app/components/work-order-timeline/timeline-cell/timeline-cell.scss
@@ -99,9 +99,6 @@
 	display: flex;
 	justify-content: space-between;
 	text-transform: capitalize;
-	white-space: nowrap; /* keep text on one line */
-	overflow: hidden; /* hide overflowing text */
-	text-overflow: ellipsis; /* show "…" for overflow */
 }
 
 .name {
@@ -110,19 +107,24 @@
 	font-size: 14px;
 	font-weight: 400;
 	font-style: book;
+	flex: 0 0 55%;
+	min-width: 0;
+	white-space: nowrap;
+	overflow: hidden;
+	text-overflow: ellipsis;
 }
 
 .visible-add {
 	display: none;
 	cursor: pointer;
-	width: 113px;
+	width: 100%;
 	height: 38px;
 	border: 1px solid rgba(195, 199, 255, 1);
 	border-radius: 8px;
 	background-color: rgba(101, 112, 255, 0.1);
 }
 
-.grid-col:hover .visible-add,
+.grid-col:hover.visible-add,
 .work-order:hover .menu {
 	display: block;
 }
